<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@android:drawable/ic_menu_gallery"
        android:title="@string/dashboard" />
    <item
        android:id="@+id/navigation_products"
        android:icon="@android:drawable/ic_menu_sort_by_size"
        android:title="@string/products" />
    <item
        android:id="@+id/navigation_orders"
        android:icon="@android:drawable/ic_menu_recent_history"
        android:title="@string/orders" />
    <item
        android:id="@+id/navigation_users"
        android:icon="@android:drawable/ic_menu_myplaces"
        android:title="@string/users" />
    <item
        android:id="@+id/navigation_settings"
        android:icon="@android:drawable/ic_menu_manage"
        android:title="@string/settings" />
</menu>